# rules_nickel

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  flake.nix
.github/workflows/: BUILD.bazel  ci.yaml  update-nickel.yaml
e2e/smoke/: BUILD  MODULE.bazel  WORKSPACE.bazel
e2e/smoke_nickel_1_1_1/: MODULE.bazel  WORKSPACE.bazel  test.ncl
e2e/smoke_nickel_1_3_0/: MODULE.bazel  WORKSPACE.bazel
e2e/smoke_nickel_1_4_0/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
e2e/smoke_nickel_1_6_0/: MODULE.bazel  WORKSPACE.bazel
examples/hello_world/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  hello.json  hello.ncl  hello_klingon.ncl  message.ncl
examples/import_path/: BUILD.bazel  MODULE.bazel  apps.ncl  apps.yaml
examples/import_path/schemas/: BUILD.bazel  helm.ncl
nickel/: BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl  nickel.bzl  repositories.bzl  toolchain.bzl
nickel/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
nickel/tests/: BUILD.bazel  version_test.bzl  version_test.sh  versions_test.bzl
scripts/: BUILD.bazel  requirements.in  requirements_lock.txt  update_nickel_versions.py
