"bzlmod declaration for rules_nickel"

module(
    name = "org_nickel_lang_rules_nickel",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

bazel_dep(name = "rules_python", version = "0.25.0", dev_dependency = True)
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.25.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//scripts:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)

nickel = use_extension("//nickel:extensions.bzl", "nickel")
nickel.toolchain(nickel_version = "1.0.0")
use_repo(nickel, "nickel_toolchains")

register_toolchains("@nickel_toolchains//:all")
