package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ]
)

genrule(
    name = "nickel",
    srcs = select({
        "//nickel:linux_x86_64": ["@nickel_linux_x86_64//file"]
    }),
    outs = ["bin/nickel"],
    cmd = "cp $(<) $(@)",
    executable = True,
    output_to_bindir = 1,
)
