load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--resolver=backtracking"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_binary(
    name = "update_nickel_versions",
    srcs = [
        "update_nickel_versions.py",
    ],
    deps = [
        requirement("httpx"),
        requirement("PyGithub"),
    ],
    visibility = ["//nickel/private:__subpackages__"]
)
