workspace(name = "rules_nickel_smoke_test")

# Override http_archive for local testing
local_repository(
    name = "org_nickel_lang_rules_nickel",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_nickel setup #
######################
# Fetches the rules_nickel dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@org_nickel_lang_rules_nickel//nickel:repositories.bzl", "nickel_register_toolchains", "rules_nickel_dependencies")

rules_nickel_dependencies()

nickel_register_toolchains(
    name = "nickel",
    nickel_version = "1.4.0",
)
