local_path_override(
    module_name = "org_nickel_lang_rules_nickel",
    path = "../..",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.34.5")

bazel_dep(name = "org_nickel_lang_rules_nickel", version = "0.0.0")

nickel = use_extension("@org_nickel_lang_rules_nickel//nickel:extensions.bzl", "nickel")
nickel.toolchain(name = "nickel", nickel_version = "1.1.1")
use_repo(nickel, "nickel_toolchains")

register_toolchains("@nickel_toolchains//:all")
