workspace(name = "rules_nickel_examples")

# Override http_archive for local testing
local_repository(
    name = "org_nickel_lang_rules_nickel",
    path = "../..",
)

load("@org_nickel_lang_rules_nickel//nickel:repositories.bzl", "nickel_register_toolchains", "rules_nickel_dependencies")

rules_nickel_dependencies()

nickel_register_toolchains(
    name = "nickel_1_1_1",
    nickel_version = "1.1.1",
)
