workspace(name = "rules_nickel_examples")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "09b51a9957adc56c905a2c980d6eb06f04beb1d85c665b467f659871403cf423",
    strip_prefix = "bazel-lib-1.34.5",
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v1.34.5/bazel-lib-v1.34.5.tar.gz",
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies")

aspect_bazel_lib_dependencies()

# Override http_archive for local testing
local_repository(
    name = "org_nickel_lang_rules_nickel",
    path = "../..",
)

load("@org_nickel_lang_rules_nickel//nickel:repositories.bzl", "nickel_register_toolchains", "rules_nickel_dependencies")

rules_nickel_dependencies()

nickel_register_toolchains(
    name = "nickel_1_4_0",
    nickel_version = "1.4.0",
)
