load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_file")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//nickel:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//nickel:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//nickel:__subpackages__"],
)

genrule(
    name = "versions.write",
    tools = ["//scripts:update_nickel_versions"],
    outs = ["versions.bzl.new"],
    cmd = "$(locations //scripts:update_nickel_versions) > $@",
    tags = ["requires-network", "no-cache"],
)

write_source_file(
    name = "versions.update",
    in_file = ":versions.write",
    out_file = "versions.bzl",
    suggested_update_target = "//nickel/private:versions.update",
    tags = ["external"],
)
