load(":version_test.bzl", "version_test_rules")
load("//nickel/private:toolchains_repo.bzl", "PLATFORMS")
load("@bazel_skylib//lib:selects.bzl", "selects")

[selects.config_setting_group(
    name = "version_test_{}".format(platform),
    match_all = meta.compatible_with,
) for [
    platform,
    meta,
] in PLATFORMS.items()]

version_test_rules(name = "nickel")
